--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "call-of-duty-api": "^1.3.4",
     "concurrently": "^6.0.2",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
